--- a/DS_Proyecto_03_ST.ipynb
+++ b/DS_Proyecto_03_ST.ipynb
@@ -4563,6 +4563,46 @@
     "\n",
     "### Es por esto que pido la mayor neutralidad y objetividad posible de quien evalue el proyecto para dilucidar si estoy realizando ambos proyectos 3 y 4 en este notebook. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Próximos pasos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interrogantes:\n",
+    "\n",
+    "* ### Mejoraría la previsión del modelo de Prophet aplicando más funcionalidades disponibles en la librería?.\n",
+    "   ### Planteado esto, desearía a futuro intentar mejorar la previsión del modelo, graficando, analizando e incluyendo de manera manual Trend Changepoints en el modelo.\n",
+    "\n",
+    " ### Fuente:\n",
+    " ### https://facebook.github.io/prophet/docs/trend_changepoints.html\n",
+    " ### https://github.com/facebook/prophet/issues/697\n",
+    " ### https://pythondata.com/forecasting-time-series-data-prophet-trend-changepoints/#:~:text=these%20changepoints%20with%20.-,changepoints%20.,Prophet(n_changepoints%3D30)%20.\n",
+    "\n",
+    "### \n",
+    "* ### Mejoraría aún más la previsión utilizando modelos de Deep Learning como por ejemplo redes neuronales?.\n",
+    "   ### Por otra parte, y en pos de la mejora en la previsión de series de tiempo otras librerías/modelos que deseo implementar son LSTM con Keras. LSTM, cuyas siglas significan Long Short-Term Memory network, que traducido sería algo así como Red de memoria a corto plazo, tienen un muy buen desempeño en previsión de Series de tiempo, este modelo de redes neuronales recurrentes, se lo puede utilizar, tomando N valores pasados (look_back) y al realizar la predicción a futuro tiene en cuenta justamente estos valores pasados para realizar la predicción.\n",
+    "\n",
+    " ### Fuente:\n",
+    " ### https://machinelearningmastery.com/how-to-develop-lstm-models-for-time-series-forecasting/\n",
+    " ### https://machinelearningmastery.com/time-series-prediction-lstm-recurrent-neural-networks-python-keras/\n",
+    " ### https://towardsdatascience.com/time-series-analysis-visualization-forecasting-with-lstm-77a905180eba\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultados esperados:\n",
+    "### Respecto a los interrogantes que me surgen, en el primer caso espero al menos una mejora leve en la previsión, pero no muy esperanzado ya que en el caso de la inclusión de regresores al modelo esperaba conseguir mejores resultados, lo cual quedó demostrado no fue así en el desarrollo del agregado del feature day_of_week.\n",
+    "### En cuanto a redes neuronales recurrentes LSTM con Keras, espero conseguir una previsión más exacta, ya que estos modelos y en particular LSTM como se expuso es un modelo que demuestra muy buenos resultados en series de tiempo.\n"
+   ]
   }
  ],
  "metadata": {
